--- a/longdoo_frontend/pubspec.yaml
+++ b/longdoo_frontend/pubspec.yaml
@@ -47,6 +47,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/longdoo_logo.png" 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,6 +73,7 @@ flutter:
     - assets/images/three.jpg
     - assets/images/four.jpg
     - assets/images/five.jpg
+    - assets/images/longdoo_logo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
