--- a/longdoo_frontend/pubspec.yaml
+++ b/longdoo_frontend/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
   animate_do: ^3.1.2
   flutter_svg: ^2.0.7
-
+  image_picker: ^0.8.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
