--- a/longdoo_frontend/pubspec.yaml
+++ b/longdoo_frontend/pubspec.yaml
@@ -82,7 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/3D_models/test01.glb
+    - assets/3D_models/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
