--- a/longdoo_frontend/android/app/src/main/AndroidManifest.xml
+++ b/longdoo_frontend/android/app/src/main/AndroidManifest.xml
@@ -48,5 +48,10 @@
   <intent>
     <action android:name="android.support.customtabs.action.CustomTabsService" />
   </intent>
+  <!-- If your app checks for email support -->
+  <intent>
+    <action android:name="android.intent.action.VIEW" />
+    <data android:scheme="mailto" />
+  </intent>
 </queries>
 </manifest>
