--- a/longdoo_frontend/pubspec.yaml
+++ b/longdoo_frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   numberpicker: ^2.1.2
   url_launcher: ^6.2.1
   flutter_native_splash: ^2.3.5
+  universal_html: ^2.2.4
   
 flutter_native_splash:
   color: "#ffffff"
